# Robotic_lesson_project_1

./: README.md  Readme.txt  pyproject.toml
robotis/darwin-op/controllers/VisionProcess/: VisionProcess.py
robotis/darwin-op/controllers/walk/: PathPlanning.cpp  PathPlanning.hpp  Walk.cpp  Walk.hpp  main.cpp  utils.cpp  utils.hpp
robotis/darwin-op/controllers/walk_last/: Walk.cpp  Walk.hpp
robotis/darwin-op/protos/: SickLms291.proto
robotis/darwin-op/worlds/: .walk.wbproj  walk.wbt
src/_1/: __init__.py
