[project]
name = "1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "buptsad", email = "saddestboy@bupt.edu.cn" }
]
dependencies = [
    "opencv-python>=4.11.0.86",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_1"]
